# ClipDLP

./: .gitignore  README.md  README2.md  clipboard_dlp_storage_strategy.md  pyproject.toml  requirements.txt  research_papers.txt  technology&architecture.md
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  USAGE.md  technology_and_architecture.md
src/clipboard_dlp/: __init__.py  analyzer.py  cli.py  gui.py
tests/: test_analyzer.py
